[RTLIB_Monitors] Install new Monitors as library
This commit updates the RTLib CMakeLists.txt to support the installation
of the new Monitor suite as a standalone library which could be linked
by applications needing its functionalities.

A new CMake support file (i.e. FindBbqMonitors.cmake) has been added as
well, which properly sets all variables needed to easily compile
Barbeque integrated applications which exploits the monitors support.

Signed-off-by: Vincenzo Consales <vincenzo.consales@gmail.com>
Signed-off-by: Andrea Di Gesare <andrea.digesare@gmail.com>
Signed-off-by: Patrick Bellasi <derkling@gmail.com>
Reviewed-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -12,10 +12,14 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
 set (RTLIB_SRC bbque_rtlib bbque_rpc ${PROJECT_BINARY_DIR}/bbque/version.cc)
 set (RTLIB_SRC bbque_exc ${RTLIB_SRC})
+
 if(BBQUE_RPC_FIFO)
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBBQUE_RPC_FIFO")
 	set (RTLIB_SRC rpc_fifo_client ${RTLIB_SRC})
 endif(BBQUE_RPC_FIFO)
+
+# Build subdirs
+add_subdirectory(monitors)
 
 set (RTLIB_SRC ${RTLIB_SRC})
 #----- Add "bbque_rtlib" target dinamic binary
@@ -48,5 +52,3 @@ install (TARGETS bbque_rtlib LIBRARY
 install(DIRECTORY "${PROJECT_SOURCE_DIR}/include/bbque/utils"
 		DESTINATION "${BBQUE_PATH_HEADERS}"
 		FILES_MATCHING PATTERN "*.h")
-
-
