[BuildSystem] Keep track of default BarbequeRTRM logfile
The BarbequeRTRM logfile is defined in a centralized way by the
main CMake build file. This information is than propagated and exploited
by all the tools which needs to access the logfile.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set (BBQUE_DAEMON_NAME     "bbqued")
 set (BBQUE_DAEMON_UID      "root")
 set (BBQUE_DAEMON_LOCKFILE "var/lock/bbqued.lock")
 set (BBQUE_DAEMON_PIDFILE  "var/run/bbqued.pid")
+set (BBQUE_DAEMON_LOGFILE  "var/bbque.log")
 set (BBQUE_DAEMON_RUNDIR   "")
 
 # Barbeque RPC configuration
