--- a/config/bbqued.defaults.in
+++ b/config/bbqued.defaults.in
@@ -19,6 +19,9 @@ PIDFILE='${CONFIG_BOSP_RUNTIME_PATH}/${BBQUE_DAEMON_PIDFILE}'
 # The BBQ daemon lock file
 LOCKFILE='${CONFIG_BOSP_RUNTIME_PATH}/${BBQUE_DAEMON_LOCKFILE}'
 #
+# The BBQ daemon (default) LOG file
+LOGFILE='${CONFIG_BOSP_RUNTIME_PATH}/${BBQUE_DAEMON_LOGFILE}'
+#
 # The folder containing PIL Layouts
 PILSETUPS='${CONFIG_BOSP_RUNTIME_PATH}/${BBQUE_PATH_PILS}'
 #
