--- a/config/bbqued.in
+++ b/config/bbqued.in
@@ -34,6 +34,7 @@ BBQUE_BIN="${BBQUE_BIN:-$BIN}"
 BBQUE_CONF="${BBQUE_CONF:-$CONF}"
 BBQUE_BRTF="${BBQUE_BRTF:-$BRTF}"
 BBQUE_PIDFILE="${BBQUE_PIDFILE:-$PIDFILE}"
+BBQUE_LOGFILE="${BBQUE_LOGFILE:-$LOGFILE}"
 BBQUE_LOCKFILE="${BBQUE_LOCKFILE:-$LOCKFILE}"
 
 # PIL Layouts and Tools
