--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -222,9 +222,8 @@ function bbque-console-stop {
 		kill -TERM `cat $SYSROOT/var/bbque/bbque-console.pids`
 }
 
-BBQUE_LOGFILE="$SYSROOT/var/bbque/bbque.log"
 function bbque-log {
-LOG="${1:-$BBQUE_LOGFILE}"
+LOG="${1:-$LOGFILE}"
 echo "Opening barbeque logfile [$LOG]..."
 aterm +sb -fn $FONT -geometry 120x56+-9-17 -title "BBQUE Log [$LOG]" \
 	-e tail -n+1 -f $LOG \
