--- a/tools/bbqueLogPlots.sh.in
+++ b/tools/bbqueLogPlots.sh.in
@@ -5,7 +5,7 @@ source @CMAKE_INSTALL_PREFIX@/etc/bbque/bosp_init.env
 
 # CONSOLE CONFIGURATION
 BBQUE_SYSROOT="${BBQUE_SYSROOT:-$SYSROOT}"
-BBQUE_LOGFILE="${BBQUE_LOGFILE:-$BBQUE_SYSROOT/var/bbque/bbque.log}"
+BBQUE_LOGFILE="${BBQUE_LOGFILE:-$LOGFILE}"
 
 BBQUE_GNUPLOT_PARAMS="--dataid --autolegend --stream --xlen 50 -ymin 0 -ymax 1.3 --lines"
 
